Add close and reopen transaction API
